--- a/index.html
+++ b/index.html
@@ -8,14 +8,23 @@
     <meta name="author" content="LUXA Digital Solutions" />
     <meta name="keywords" content="web development, digital agency, custom websites, mobile apps, React, TypeScript, premium development" />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="theme-color" content="#12bbbb">
+
     <meta property="og:title" content="LUXA Digital Solutions - Premium Web Development Agency" />
     <meta property="og:description" content="Professional web development agency specializing in custom websites, mobile apps, and digital solutions." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/lovable-uploads/ba542bb9-91f7-434d-bdec-fc554c9339ac.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@LUXA_Digital" />
+    <meta name="twitter:image" content="/lovable-uploads/ba542bb9-91f7-434d-bdec-fc554c9339ac.png" />
   </head>
 
   <body>
