--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
     <meta name="author" content="LUXA Digital Solutions" />
     <meta name="keywords" content="web development, digital agency, custom websites, mobile apps, React, TypeScript, premium development" />
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/favicon.png">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <!-- Favicon - LUXA Logo -->
+    <link rel="icon" href="/lovable-uploads/ba542bb9-91f7-434d-bdec-fc554c9339ac.png" type="image/png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=3">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=3">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=3">
+    <link rel="shortcut icon" href="/lovable-uploads/ba542bb9-91f7-434d-bdec-fc554c9339ac.png" type="image/png">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=3">
     <link rel="manifest" href="/site.webmanifest">
     <meta name="theme-color" content="#12bbbb">
+    <meta name="msapplication-TileColor" content="#12bbbb">
+    <meta name="msapplication-TileImage" content="/lovable-uploads/ba542bb9-91f7-434d-bdec-fc554c9339ac.png">
 
     <meta property="og:title" content="LUXA Digital Solutions - Premium Web Development Agency" />
     <meta property="og:description" content="Professional web development agency specializing in custom websites, mobile apps, and digital solutions." />
