--- a/index.html
+++ b/index.html
@@ -23,11 +23,20 @@
     <meta property="og:title" content="LUXA Digital Solutions - Premium Web Development Agency" />
     <meta property="og:description" content="Professional web development agency specializing in custom websites, mobile apps, and digital solutions." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/lovable-uploads/ba542bb9-91f7-434d-bdec-fc554c9339ac.png" />
+    <meta property="og:url" content="https://luxasolutions.vercel.app" />
+    <meta property="og:image" content="https://luxasolutions.vercel.app/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="LUXA Digital Solutions - Premium Web Development Agency" />
+    <meta property="og:site_name" content="LUXA Digital Solutions" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@LUXA_Digital" />
-    <meta name="twitter:image" content="/lovable-uploads/ba542bb9-91f7-434d-bdec-fc554c9339ac.png" />
+    <meta name="twitter:creator" content="@LUXA_Digital" />
+    <meta name="twitter:title" content="LUXA Digital Solutions - Premium Web Development Agency" />
+    <meta name="twitter:description" content="Professional web development agency specializing in custom websites, mobile apps, and digital solutions." />
+    <meta name="twitter:image" content="https://luxasolutions.vercel.app/og-image.png" />
+    <meta name="twitter:image:alt" content="LUXA Digital Solutions Logo" />
   </head>
 
   <body>
