--- a/index.html
+++ b/index.html
@@ -4,38 +4,90 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LUXA Digital Solutions - Premium Web Development Agency</title>
-    <meta name="description" content="Professional web development agency specializing in custom websites, mobile apps, and digital solutions. Transform your business with LUXA's expert team." />
+    <meta
+      name="description"
+      content="Professional web development agency specializing in custom websites, mobile apps, and digital solutions. Transform your business with LUXA's expert team."
+    />
     <meta name="author" content="LUXA Digital Solutions" />
-    <meta name="keywords" content="web development, digital agency, custom websites, mobile apps, React, TypeScript, premium development" />
+    <meta
+      name="keywords"
+      content="web development, digital agency, custom websites, mobile apps, React, TypeScript, premium development"
+    />
 
     <!-- Favicon - LUXA Logo -->
-    <link rel="icon" href="/lovable-uploads/ba542bb9-91f7-434d-bdec-fc554c9339ac.png" type="image/png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=3">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=3">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=3">
-    <link rel="shortcut icon" href="/lovable-uploads/ba542bb9-91f7-434d-bdec-fc554c9339ac.png" type="image/png">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=3">
-    <link rel="manifest" href="/site.webmanifest">
-    <meta name="theme-color" content="#12bbbb">
-    <meta name="msapplication-TileColor" content="#12bbbb">
-    <meta name="msapplication-TileImage" content="/lovable-uploads/ba542bb9-91f7-434d-bdec-fc554c9339ac.png">
+    <link
+      rel="icon"
+      href="/lovable-uploads/ba542bb9-91f7-434d-bdec-fc554c9339ac.png"
+      type="image/png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon-32x32.png?v=3"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon-16x16.png?v=3"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/apple-touch-icon.png?v=3"
+    />
+    <link
+      rel="shortcut icon"
+      href="/lovable-uploads/ba542bb9-91f7-434d-bdec-fc554c9339ac.png"
+      type="image/png"
+    />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=3" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="theme-color" content="#12bbbb" />
+    <meta name="msapplication-TileColor" content="#12bbbb" />
+    <meta
+      name="msapplication-TileImage"
+      content="/lovable-uploads/ba542bb9-91f7-434d-bdec-fc554c9339ac.png"
+    />
 
-    <meta property="og:title" content="LUXA Digital Solutions - Premium Web Development Agency" />
-    <meta property="og:description" content="Professional web development agency specializing in custom websites, mobile apps, and digital solutions." />
+    <meta
+      property="og:title"
+      content="LUXA Digital Solutions - Premium Web Development Agency"
+    />
+    <meta
+      property="og:description"
+      content="Professional web development agency specializing in custom websites, mobile apps, and digital solutions."
+    />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://luxasolutions.vercel.app" />
-    <meta property="og:image" content="https://luxasolutions.vercel.app/og-image.png" />
+    <meta
+      property="og:image"
+      content="https://luxasolutions.vercel.app/og-image.png"
+    />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="LUXA Digital Solutions - Premium Web Development Agency" />
+    <meta
+      property="og:image:alt"
+      content="LUXA Digital Solutions - Premium Web Development Agency"
+    />
     <meta property="og:site_name" content="LUXA Digital Solutions" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@LUXA_Digital" />
     <meta name="twitter:creator" content="@LUXA_Digital" />
-    <meta name="twitter:title" content="LUXA Digital Solutions - Premium Web Development Agency" />
-    <meta name="twitter:description" content="Professional web development agency specializing in custom websites, mobile apps, and digital solutions." />
-    <meta name="twitter:image" content="https://luxasolutions.vercel.app/og-image.png" />
+    <meta
+      name="twitter:title"
+      content="LUXA Digital Solutions - Premium Web Development Agency"
+    />
+    <meta
+      name="twitter:description"
+      content="Professional web development agency specializing in custom websites, mobile apps, and digital solutions."
+    />
+    <meta
+      name="twitter:image"
+      content="https://luxasolution.com/og-image.png"
+    />
     <meta name="twitter:image:alt" content="LUXA Digital Solutions Logo" />
   </head>
 
